.provarCaches/00D410000011HE0EAM/objects/rstk__soshiplot__c.object
<CustomObject>
    <description>soshiplot__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soshiplot_soshipdmd__r.rstk__externalid__c + &quot;_&quot; + rstk__soshiplot_lotno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soshiplot_soshipdmd__r.rstk__soshipdmd_soorddmd__r.rstk__soorddmd_compitem__c +&quot;_&quot;+rstk__soshiplot_lotno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshiplot_icitemlot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory By Lot Number</label>
        <referenceTo>rstk__icitemlot__c</referenceTo>
        <relationshipLabel>Shipped Product Lots Detail</relationshipLabel>
        <relationshipName>soshiplots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshiplot_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshiplot_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshiplot_soshipdmd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper Demand</label>
        <referenceTo>rstk__soshipdmd__c</referenceTo>
        <relationshipLabel>Shipped Product Lots Detail</relationshipLabel>
        <relationshipName>soshiplots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipped Product Lot Detail</label>
    <listViews>
        <fullName>DJ_Shipped_Product_Lots_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__soshiplot_soshipdmd__c</columns>
        <columns>rstk__soshiplot_lotno__c</columns>
        <columns>rstk__soshiplot_qty__c</columns>
        <columns>rstk__soshiplot_icitemlot__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>deepak</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>DJ-Shipped Product Lots Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Shipped_Product_Lots_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__soshiplot_soshipdmd__c</columns>
        <columns>rstk__soshiplot_lotno__c</columns>
        <columns>rstk__soshiplot_qty__c</columns>
        <columns>rstk__soshiplot_icitemlot__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>Automated</value>
        </filters>
        <label>Shipped Product Lots Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipped Product Lots Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Lot_Number</fullName>
        <active>true</active>
        <description>Lot Number is Required and not Modifiable.</description>
        <errorConditionFormula>ISBLANK( rstk__soshiplot_lotno__c ) || (!ISNEW() &amp;&amp;  ISCHANGED(rstk__soshiplot_lotno__c ))</errorConditionFormula>
        <errorMessage>Lot Number is Required and not Modifiable.</errorMessage>
    </validationRules>
</CustomObject>